<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclgd-sensors</name>
  <version>0.1.0</version>
  <description>Little demo for rclgd based sensors</description>
  <maintainer email="ozuba@ozuba.es">Ozuba</maintainer>
  <license>MIT</license>

  <buildtool_depend>rclgd</buildtool_depend>
  <export>
    <build_type>rclgd</build_type>
  </export>
</package>